--- a/style/common.css
+++ b/style/common.css
@@ -28,7 +28,8 @@ h1,h2,h3,h4{
 .navbar .nav-logo{
     width: 140px;
     height: 70px;
-    background: #f4a53d;
+    background: url("../img/logo.png") center no-repeat;
+    background-size: 120px 50px;
     float: left;
 }
 .navbar .nav-list{
@@ -116,6 +117,53 @@ h1,h2,h3,h4{
         display: block;
     }
 }
+/*页脚开始*/
+.footer{
+    width: 100%;
+    min-height: 200px;
+    padding-top: 50px;
+    padding-bottom: 45px;
+    background: #fff;
+}
+.footer-container{
+    max-width: 800px;
+    margin: 0 auto;
+}
+.footer-container p{
+    color: #787878;
+    font-size: 14px;
+    margin: 5px 0;
+}
+.footer ul{
+    display: block;
+    margin: 0 auto;
+    height: auto;
+    width: 650px;
+    overflow: hidden;
+    margin-top: 35px;
+}
+.footer a{
+    color: #888;
+}
+.footer a:hover,
+.footer a:active{
+    color: #555;
+    text-decoration: none;
+}
+.footer li{
+    display: inline-block;
+    width: 100px;;
+    float: left;
+    font-size: 14px;
+    cursor: pointer;
+}
+/*页脚结束*/
+
+
+/*颜色设置*/
+.orange{
+    color: #e58537;
+}
 .wrap{
     width: 100%;
     background: #fff;
@@ -123,4 +171,11 @@ h1,h2,h3,h4{
 .section-container{
     max-width: 1000px;
     margin: 0 auto;
+}
+.title{
+    font-size: 35px;
+    font-weight: bolder;
+}
+.divide-img{
+    width: 350px;
 }
