--- a/style/index.css
+++ b/style/index.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
 }
 .section1{
-    background: url("../img/index/banner.jpg") center no-repeat;
+    background: url("../img/index/banner-bg.jpg") center no-repeat;
 }
 .section2{
     background: url("../img/index/1.jpg") center no-repeat;
@@ -29,8 +29,15 @@
 /*section1*/
 .section1{
     height: 535px;
+    padding-top: 60px;
 }
+.banner-txt{
+    display: block;
+    margin: 0 auto;
+}
+.banner-circle{
 
+}
 /*section2*/
 .section2{
     padding: 50px;
@@ -45,9 +52,40 @@
 .section2 p{
     font-size: 16px;
     margin: 50px;
+    text-align: left;
 }
-.section2 img{
-    width: 90%;
+.index-system-box{
+    width: 100%;
+    overflow: hidden;
+}
+.index-system-card{
+    width: 225px;
+    height: 385px;
+    float: left;
+    margin: 20px 54px;
+}
+.index-system-box .card1{
+    background: #158a8f;
+    color: #158a8f;
+}
+.index-system-box .card2{
+    background: #eaad1c;
+    color: #eaad1c;
+}
+.index-system-box .card3{
+    background: #ce2e21;
+    color: #ce2e21;
+}
+.index-system-card img{
+    margin: 25px auto;
+}
+.index-system-card-txt{
+    width: 190px;
+    height: 140px;
+    margin: 0 auto;
+    background: #f6efe0;
+    padding: 20px 15px;
+    text-align: left;
 }
 /*section3*/
 .section3 {
