--- a/style/common.css
+++ b/style/common.css
@@ -11,7 +11,12 @@ h1,h2,h3,h4{
     margin: 0;
     padding: 0;
 }
-
+.left{
+    float: left;
+}
+.right{
+    float: right;
+}
 /*导航栏*/
 .navbar{
     display: block;
