--- a/style/common.css
+++ b/style/common.css
@@ -165,7 +165,7 @@ h1,h2,h3,h4{
     display: block;
     margin: 0 auto;
     height: auto;
-    width: 650px;
+    max-width: 650px;
     overflow: hidden;
     margin-top: 35px;
 }
@@ -198,6 +198,26 @@ h1,h2,h3,h4{
 .section-container{
     max-width: 1000px;
     margin: 0 auto;
+}
+@media all and (max-width: 1100px){
+    .section-container{
+        max-width: 900px;
+    }
+}
+@media all and (max-width: 900px){
+    .section-container{
+        max-width: 700px;
+    }
+}
+@media all and (max-width: 700px){
+    .section-container{
+        max-width: 600px;
+    }
+}
+@media all and (max-width: 600px){
+    .section-container{
+        max-width: 90%;
+    }
 }
 .title{
     font-size: 35px;
