--- a/style/common.css
+++ b/style/common.css
@@ -226,3 +226,24 @@ h1,h2,h3,h4{
 .divide-img{
     width: 350px;
 }
+.back-top{
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    background: rgb(255, 133, 23);
+    right: 20px;
+    bottom: 20px;
+    border-radius: 50%;
+    opacity: 0.8;
+    cursor: pointer;
+    display: none;
+}
+.back-top .fa-rocket{
+    color: #fff;
+    font-size: 35px;
+    line-height: 65px;
+    transform: rotate(-44deg);
+}
+.back-top:hover{
+    opacity: 1;
+}
