--- a/style/common.css
+++ b/style/common.css
@@ -17,6 +17,24 @@ h1,h2,h3,h4{
 .right{
     float: right;
 }
+.form-btn{
+    background: #e58538;
+    color: #fff;
+    line-height: 40px;
+    font-size: 18px;
+    margin: 0 auto;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top:0;
+    background: rgba(0, 0, 0, 0.4);
+    display: none;
+    z-index: 999;
+}
 /*导航栏*/
 .navbar{
     display: block;
@@ -214,7 +232,7 @@ h1,h2,h3,h4{
         max-width: 600px;
     }
 }
-@media all and (max-width: 600px){
+@media all and (max-width: 620px){
     .section-container{
         max-width: 90%;
     }
@@ -222,6 +240,11 @@ h1,h2,h3,h4{
 .title{
     font-size: 35px;
     font-weight: bolder;
+}
+@media all and (max-width: 400px){
+    .title{
+        font-size: 28px;
+    }
 }
 .divide-img{
     width: 350px;
