--- a/style/register.css
+++ b/style/register.css
@@ -1,7 +1,12 @@
 .reg-banner{
     width: 100%;
-    height: 260px;
-    background: #1f455f;
+    height: 290px;
+    background:url("../img/register/reg-banner.jpg") center no-repeat;
+    background-size: cover;
+}
+.reg-banner img{
+    max-width: 80%;
+    margin-top: 96px;
 }
 .reg-box{
     max-width: 800px;
@@ -17,14 +22,14 @@
 }
 .reg-step-bar>li{
     display: block;
-    height: 40px;
+    height: 45px;
     float: left;
     margin: 0 2px;
-    background: #cfcfcf;
+    background: #d9d9d9;
     color: #555;
     flex: 1;
-    font-size: 16px;
-    line-height: 40px;
+    font-size: 18px;
+    line-height: 45px;
 }
 
 .reg-form{
@@ -35,11 +40,20 @@
 }
 .reg-form input[type=text]{
     width: 100%;
-    height: 35px;
+    height: 43px;
     border: #e58538 solid 1px;
-    padding-left: 30px;
+    padding-left: 60px;
     margin: 5px 0 ;
     outline: none;
+}
+.reg-form input:first-child{
+    background: url("../img/register/icon-man.png") left no-repeat;
+}
+.reg-form input:nth-child(2){
+    background: url("../img/register/icon-phone.png") left no-repeat;
+}
+.reg-form input:nth-child(3){
+    background: url("../img/register/icon-mail.png") left no-repeat;
 }
 .reg-form textarea{
     width: 100%;
@@ -53,6 +67,7 @@
 }
 .reg-btn{
     margin: 5px 0;
+    font-size: 21px;
 }
 .reg-btn:hover{
     background: #dd6a2a;
@@ -126,7 +141,65 @@
 .pay-btn:active{
     background: #ff3401;
 }
+.reg-pay-num{
+    font-size: 20px;
+    font-weight: bold;
+    color: #ff6d00;
+    margin:0 5px;
+}
 
+/*报名须知*/
+.reg-info-container{
+    width: 600px;
+    margin: 0 auto;
+}
+.reg-info-title{
+    font-size: 24px;
+    font-weight: bolder;
+    color: #e58537;
+    margin: 20px;
+}
+.reg-info-article{
+    font-size: 18px;
+    color: #ababab;
+    line-height: 28px;
+    text-align: left;
+}
+.ez-checkbox-wrap{
+    display: block;
+    overflow: hidden;
+    text-align: left;
+    color: #ababab;
+    font-size: 17px;
+    line-height: 20px;
+    margin: 10px 0;
+}
+.ez-checkbox{
+    display: block;
+    float: left;
+    width: 20px;
+    height: 20px;
+    background: url("../img/checkbox.png") center no-repeat;
+    background-position: 0 0 ;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.ez-checkbox-checked{
+    background-position: 0 -20px ;
+}
+.agree-btn{
+    width: 340px;
+    margin: 40px auto;
+}
+.agree-btn:hover{
+    text-decoration: none;
+    color: #fff;
+    background: #e56923;
+}
+.agree-btn:active{
+    background: #e5451f;
+}
 /*报名成功*/
 .img-block{
     width: 100px;
@@ -135,6 +208,9 @@
     margin: 100px auto 20px auto;
 }
 .reg-txt{
-    font-size: 18px;
+    font-size: 21px;
     color: #e58538;
+}
+.reg-face{
+    width: 85px;
 }
