--- a/style/teaching-system.css
+++ b/style/teaching-system.css
@@ -8,7 +8,7 @@
 /*******system-part1*********/
 .system-banner-box{
     min-height: 535px;
-    background: url("../img/teaching-system/banner.png") no-repeat center;
+    background: url("../img/teaching-system/ts-banner.jpg") no-repeat center;
     background-size: cover;
     color: #fff;
     padding-top: 160px;
