--- a/style/common.css
+++ b/style/common.css
@@ -1,4 +1,4 @@
-*{font-family: }
+*{font-family: Microsoft YaHei,Helvetica,Tahoma}
 body{
     font-family: "Helvetica Neue", Helvetica, Arial, Verdana, "Trebuchet MS";
 }
