--- a/style/online-courses.css
+++ b/style/online-courses.css
@@ -101,7 +101,7 @@
 }
 
 .oc-part2{
-    background: url("../img/online-courses/2.jpg") no-repeat center;
+    background: url("../img/online-courses/2d.jpg") no-repeat center;
     background-size: cover;
     min-height: 700px;
 
@@ -113,7 +113,7 @@
     min-height: 700px;
 }
 .oc-part4{
-    background: url("../img/online-courses/4.jpg") no-repeat center;
+    background: url("../img/online-courses/4d.jpg") no-repeat center;
     background-size: cover;
     min-height: 700px;
 }
