--- a/style/common.css
+++ b/style/common.css
@@ -5,14 +5,23 @@ body{
 div,section,aside,p,article{
     text-align: center;
 }
+ul{
+    display: block;
+}
 ul,li{
     list-style: none;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 h1,h2,h3,h4{
     margin: 0;
     padding: 0;
 }
-a,a:link,a:visited,a:hover,a:active{
+a,a:link,a:visited{
+    text-decoration: none;
+}
+a:hover,a:active{
     text-decoration: none;
 }
 .left{
