--- a/style/common.css
+++ b/style/common.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4{
     margin: 0;
     padding: 0;
 }
-a,a:link,a:visited{
+a:link,a:visited{
     text-decoration: none;
 }
 a:hover,a:active{
