--- a/style/common.css
+++ b/style/common.css
@@ -97,12 +97,12 @@ a:hover,a:active{
 .nav-btn{
     display: none;
     position: absolute;
-    right: 10px;
-    top: 15px;
-    height: 40px;
-    width: 40px;
-    line-height: 40px;
-    font-size: 40px;
+    right: 15px;
+    top: 20px;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    font-size: 35px;
     color: #555;
     padding: 0;
 }
@@ -265,6 +265,7 @@ a:hover,a:active{
 }
 .divide-img{
     width: 350px;
+    max-width: 90%;
 }
 .back-top{
     position: fixed;
