--- a/style/closed-courses.css
+++ b/style/closed-courses.css
@@ -286,15 +286,15 @@
     background: #fff;
     margin:0 26px;
     float: left;
-    -moz-box-shadow: 0px 10px 10px rgba(29,29,29,0.6);
-    -webkit-box-shadow: 0px 10px 10px rgba(29,29,29,0.6);
-    box-shadow: 0px 10px 10px rgba(29,29,29,0.6);
+    -moz-box-shadow: 0 10px 10px rgba(29,29,29,0.6);
+    -webkit-box-shadow: 0 10px 10px rgba(29,29,29,0.6);
+    box-shadow: 0 10px 10px rgba(29,29,29,0.6);
     cursor: auto;
     transition: 0.3s;
     position: relative;
 }
 .shelf-card:hover{
-    box-shadow: 0px 10px 10px rgba(29,29,29,0.8);
+    box-shadow: 0 10px 10px rgba(29,29,29,0.8);
 }
 .shelf-card-img{
     width: 100%;
