--- a/style/index.css
+++ b/style/index.css
@@ -252,9 +252,20 @@
 }
 @media all and (max-width: 400px){
     .section4 .teacher-box .teacher-card{
-        width: 150px;
-        margin:10px auto;
-        float: none;
+        width: 124px;
+        margin: 5px 18px;
+        height: 270px;
+        float: left;
         opacity: 0.8;
     }
+    .section4 .teacher-card img{
+        width: 100%;
+        height: 120px;
+    }
+}
+@media all and (max-width: 350px){
+    .section4 .teacher-box .teacher-card{
+        margin: 5px 10px;
+    }
+
 }
