--- a/style/common.css
+++ b/style/common.css
@@ -218,6 +218,7 @@ a:hover,a:active{
     float: left;
     font-size: 14px;
     cursor: pointer;
+    margin: 5px 0;
 }
 /*页脚结束*/
 
@@ -287,6 +288,17 @@ a:hover,a:active{
 }
 .back-top:hover{
     opacity: 1;
+}
+@media all and (max-width: 600px) {
+    .back-top{
+        width: 45px;
+        height: 45px;
+        right: 10px;
+        bottom: 10px;
+    }
+    .back-top .back-top-icon{
+        line-height: 45px;
+    }
 }
 /*.back-top:hover .back-top-icon{*/
     /*color: #e58537;*/
