--- a/style/register.css
+++ b/style/register.css
@@ -8,6 +8,25 @@
     max-width: 80%;
     margin-top: 96px;
 }
+@media all and (max-width: 1000px){
+    .reg-banner{
+        height: 230px;
+    }
+    .reg-banner img{
+        margin-top: 60px;
+    }
+}
+@media all and (max-width: 450px){
+    .reg-banner{
+        height: 180px;
+    }
+    .reg-banner img{
+        margin-top: 40px;
+    }
+}
+@media all and (max-width: 1000px){
+
+}
 .reg-box{
     max-width: 800px;
     margin: 0 auto;
@@ -65,6 +84,7 @@
     margin: 5px 0;
     outline: none;
 }
+
 .reg-btn{
     margin: 5px 0;
     font-size: 21px;
@@ -122,6 +142,23 @@
     background: #8b6754;
 }
 
+@media all and (max-width: 600px){
+    .reg-form{
+        width: 70%;
+    }
+}
+@media all and (max-width: 450px){
+    .reg-form{
+        width: 80%;
+    }
+    .reg-step-bar>li{
+        font-size: 12px;
+        height: 40px;
+        line-height: 40px;
+    }
+}
+
+
 /*支付页面*/
 .pay-txt{
     color: #888;
@@ -130,6 +167,7 @@
 }
 .pay-btn{
     width: 340px;
+    max-width: 80%;
     height: 40px;
     line-height: 40px;
     background: #ff6d00;
@@ -151,6 +189,7 @@
 /*报名须知*/
 .reg-info-container{
     width: 600px;
+    max-width: 84%;
     margin: 0 auto;
 }
 .reg-info-title{
@@ -190,6 +229,7 @@
 }
 .agree-btn{
     width: 340px;
+    max-width: 100%;
     margin: 40px auto;
 }
 .agree-btn:hover{
@@ -199,6 +239,23 @@
 }
 .agree-btn:active{
     background: #e5451f;
+}
+
+@media all and (max-width: 450px) {
+    .reg-box{
+        min-height: 300px;
+        padding-bottom: 20px;
+    }
+    .reg-info-title{
+        font-size: 20px;
+        margin: 15px;
+    }
+    .reg-info-article{
+        font-size: 16px;
+    }
+    .ez-checkbox-wrap{
+        font-size: 15px;
+    }
 }
 /*报名成功*/
 .img-block{
@@ -210,7 +267,15 @@
 .reg-txt{
     font-size: 21px;
     color: #e58538;
+    margin: 20px;
 }
 .reg-face{
     width: 85px;
+    margin: 120px 0 40px 0
+}
+
+@media all and (max-width: 450px) {
+    .reg-face{
+        margin: 40px 0 0 0
+    }
 }
