--- a/style/common.css
+++ b/style/common.css
@@ -216,7 +216,7 @@ a:hover,a:active{
 }
 .footer li{
     display: inline-block;
-    width: 100px;;
+    width: 20%;
     float: left;
     font-size: 14px;
     cursor: pointer;
